<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    tools:context=".MainActivity2"
    android:clickable="true"
    android:longClickable="true">


    <TextView
        android:id="@+id/add_item_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_item_message"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/main_items_linear_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/main_items_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_title_text_view">

        <EditText
            android:id="@+id/item_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/add_item_edit_text_hint"
            android:inputType="textPersonName" />

        <CheckBox
            android:id="@+id/is_urgent_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_item_urgent_text" />

        <Button
            android:id="@+id/save_item_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_item_text"
            android:onClick="saveItemAction"/>

        <Button
            android:id="@+id/add_item_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_text"
            android:onClick="addItemPageCancelButtonAction"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>